# mcts-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
examples/: CMakeLists.txt
examples/connect4/: CMakeLists.txt  connect4.cpp  connect4.hpp  main.cpp
examples/tictactoe/: CMakeLists.txt  main.cpp  tictactoe.cpp  tictactoe.hpp
examples/uttt/: CMakeLists.txt  main.cpp  uttt.cpp  uttt.hpp
include/: CMakeLists.txt
include/MCTS/: Action.hpp  Agent.hpp  Node.hpp  State.hpp  Tree.hpp  Utils.hpp
src/: CMakeLists.txt
src/MCTS/: Agent.cpp  Node.cpp  Node.hpp  State.hpp  Tree.cpp
tests/: CMakeLists.txt  test_connect4.cpp  test_tictactoe.cpp  test_uttt.cpp
